# pylibjpeg-data

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
data/: __init__.py  manager.py
data/ds/: __init__.py
data/ds/JPEG2000/: ELSCINT1_JP2vsJ2K.dcm  MAROTECH_CT_JP2Lossy.dcm  __init__.py
data/ds/JPEG2000Lossless/: 966_fixed.dcm  NM_Kakadu44_SOTmarkerincons.dcm  TOSHIBA_J2K_SIZ0_PixRep1.dcm  __init__.py
data/ds/JPEGLosslessSV1/: JPEGLosslessP14SV1_3s_2f_u_08_08.dcm  __init__.py
data/jpg/15444/2KLS/: oj36.j2k
data/tests/: test_manager.py
ljdata/: __init__.py  _version.py  manager.py
ljdata/ds/: __init__.py
ljdata/ds/JPEG2000/: OsirixFake16BitsStoredFakeSpacing.dcm  __init__.py
ljdata/ds/JPEG2000Lossless/: 966.dcm  TOSHIBA_J2K_SIZ1_PixRep0.dcm  __init__.py
ljdata/ds/JPEGLosslessSV1/: __init__.py
ljdata/ds/LittleEndianExplicit/: __init__.py
ljdata/ds/LittleEndianImplicit/: __init__.py
ljdata/ds/RLELossless/: __init__.py
ljdata/jpg/15444/2KLS/: 693.j2k
ljdata/tests/: test_manager.py
